--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -9,7 +9,7 @@
 %\subtitle{Using the CUED template}
 
 %% The full name of the author
-\author{Author}
+\author{Martin Thomas Callaghan}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
 %\dept{Department of Engineering}
@@ -27,7 +27,7 @@
 %\collegeshield{\includegraphics[width=0.2\textwidth]{CollegeShields/Kings}}
 
 %% Full title of the Degree
-\degreetitle{Degree Name}
+\degreetitle{Doctor of Philosophy}
 
 
 %% College affiliation (optional)
