--- a/thesis.tex
+++ b/thesis.tex
@@ -31,10 +31,10 @@
 \mainmatter
 
 \include{Ch1-Intro}
-%\include{Chapter2/chapter2}
-%\include{Chapter3/chapter3}
-%\include{Chapter4/chapter4}
-%\include{Chapter5/chapter5}
+\include{Ch2-LiteratureReview}
+\include{Ch3-Methodology}
+\include{Ch4-ResultsAndDiscussion}
+\include{Ch5-SummaryConclusionsFurtherWork}
 %\include{Chapter6/chapter6}
 %\include{Chapter7/chapter7}
 %\include{Chapter8/chapter8}
